# simple-backend-templates

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
NOTES/: TODO.txt
fast-api-template/: .flake8  Makefile  README.md  docker-compose.yaml  pyproject.toml
fast-api-template/src/: database.py  log.py  main.py  models.py  settings.py
fast-api-template/src/repos/: items.py
fast-api-template/src/routers/: items.py
golang-gin-pgx/: Dockerfile  Makefile  README.md  docker-compose.yaml  go.mod  go.sum  main.go  run.sh
golang-gin-pgx/database/: database.go
golang-gin-pgx/dependencies/: dependencies.go
golang-gin-pgx/docs/: docs.go  swagger.json  swagger.yaml
golang-gin-pgx/migrations/: 000002_create_item_table.up.sql  000003_item_name_unique.down.sql
golang-gin-pgx/models/: models.go
golang-gin-pgx/repos/: items.go
golang-gin-pgx/routes/: items.go  metrics.go  status.go
golang-gin-pgx/tests/: api_test.go
golang-gin-postgres/: README.md  docker-compose.yaml  go.mod
golang-gin-postgres/docs/: docs.go  swagger.yaml
golang-gin-postgres/logger/: logger.go
golang-gin-postgres/tests/: api_test.go
golang-ogen-pgx/: Dockerfile  Makefile  README.md  docker-compose.yaml  go.mod  go.sum  openapi-schema.yaml
golang-ogen-pgx/cmd/serverd/: main.go
golang-ogen-pgx/cmd/testclientd/: testclient.go
golang-ogen-pgx/internal/openapi/: handlers.go
golang-ogen-pgx/internal/openapi/ogen/: oas_client_gen.go  oas_handlers_gen.go  oas_interfaces_gen.go  oas_json_gen.go  oas_operations_gen.go  oas_parameters_gen.go  oas_request_decoders_gen.go  oas_request_encoders_gen.go  oas_response_decoders_gen.go  oas_response_encoders_gen.go  oas_router_gen.go  oas_schemas_gen.go  oas_server_gen.go  oas_unimplemented_gen.go  oas_validators_gen.go
golang-ogen-pgx/internal/repos/: items.go
golang-ogen-postgres/: .gitignore  Makefile  README.md  docker-compose.yaml  go.sum  openapi-schema.yaml
golang-ogen-postgres/cmd/testclientd/: testclient.go
golang-ogen-postgres/internal/dependencies/: dependencies.go
golang-ogen-postgres/internal/logger/: logger.go
golang-ogen-postgres/internal/models/: models.go
golang-ogen-postgres/internal/openapi/: handlers.go
golang-ogen-postgres/internal/openapi/ogen/: oas_client_gen.go  oas_handlers_gen.go  oas_interfaces_gen.go  oas_json_gen.go  oas_operations_gen.go  oas_parameters_gen.go  oas_request_decoders_gen.go  oas_request_encoders_gen.go  oas_response_decoders_gen.go  oas_response_encoders_gen.go  oas_router_gen.go  oas_schemas_gen.go  oas_server_gen.go  oas_unimplemented_gen.go  oas_validators_gen.go
golang-ogen-postgres/internal/repos/: items.go
golang-ogen-postgres/migrations/: 000003_item_name_unique.up.sql
python-fast-api/: README.md
python-fast-api/src/: database.py  models.py
python-fastapi-asyncpg/: .dockerignore  .flake8  Dockerfile  Makefile  README.md  docker-compose.yaml  locustfile.py  pyproject.toml  requirements.txt
python-fastapi-asyncpg/alembic/versions/: f5a8ba179a4e_create_item_table.py  f980d790e870_item_name_unique.py
python-fastapi-asyncpg/app/: database.py  log.py  main.py  models.py  settings.py
python-fastapi-asyncpg/app/repos/: items.py
python-fastapi-asyncpg/app/routers/: examples.py  items.py  test_items.py
python-fastapi-asyncpg/src/: database.py  main.py  models.py  settings.py
python-fastapi-asyncpg/src/repos/: items.py
python-fastapi-asyncpg/src/routers/: examples.py  items.py  test_items.py
python-fastapi-codegen-postgres/: .dockerignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  openapi-schema.yaml  pyproject.toml  requirements.txt
python-fastapi-codegen-postgres/alembic/: env.py
python-fastapi-codegen-postgres/app/: database.py  log.py  main.py  models.py  test_main.py
python-fastapi-codegen-postgres/app/repos/: items.py
python-fastapi-codegen-postgres/src/: database.py  log.py  main.py  models.py  settings.py  test_main.py
python-fastapi-codegen-postgres/src/repos/: items.py
python-fastapi-redisjobqueue/: Dockerfile.server  Dockerfile.worker  Makefile  README.md  app.py  client.py  docker-compose.yml  hot_reload.py  logger_config.py  pyproject.toml  requirements.txt  worker.py
python-fastapi-redisqueue/: Makefile  README.md  app.py  docker-compose.yml  pyproject.toml
ray-serve-poc/: Dockerfile  Makefile  README.md  app.py  client.py  docker-compose.yaml  pyproject.toml
uv_example/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
