[tool.poetry]
name = "python-fastapi-asyncpg"
version = "0.1.0"
description = "python-fastapi-asyncpg template"
authors = ["Harry Sadler <harrysadlermusic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
httpx = "^0.24.0"
python-json-logger = "^2.0.7"
asyncpg = "^0.28.0"
prometheus-fastapi-instrumentator = "^6.0.0"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"
flake8-isort = "^6.0.0"
pytest = "^7.3.2"
pytest-mock = "^3.11.1"
pytest-asyncio = "^0.21.0"
locust = "^2.15.1"

[tool.black]
line-length = 100

[tool.isort]
profile="black"
line_length = 100

[tool.mypy]
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
