[tool.poetry]
name = "python-fastapi-asyncpg"
version = "0.1.0"
package-mode = false
description = "python-fastapi-asyncpg template"
authors = ["Harry Sadler <harrysadlermusic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.0"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
python-json-logger = "^3.3.0"
asyncpg = "^0.30.0"
prometheus-fastapi-instrumentator = "^7.0.2"
alembic = "^1.15.1"
psycopg2-binary = "^2.9.10"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"
flake8-isort = "^6.0.0"
pytest = "^7.3.2"
pytest-mock = "^3.11.1"
pytest-asyncio = "^0.21.0"
locust = "^2.15.1"

[tool.black]
line-length = 100

[tool.isort]
profile="black"
line_length = 100

[tool.mypy]
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
