[project]
name = "python-fastapi-codegen-postgres"
version = "0.1.0"
description = "python-fastapi-codegen-postgres template"
requires-python = ">=3.13"

dependencies = [
    "uvicorn",
    "fastapi",
    "asyncpg",
    "alembic",
    "psycopg2-binary",
    "pydantic-settings",
    "python-json-logger",
    "prometheus-fastapi-instrumentator",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "httpx",
    "datamodel-code-generator",
]

[tool.black]
line-length = 100
exclude = "src/models\\.py"

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = "src/models\\.py"
