[project]
name = "python-fastapi-codegen-postgres"
version = "0.1.0"
description = "python-fastapi-codegen-postgres template"
requires-python = ">=3.13"

dependencies = [
    "uvicorn",
    "fastapi",
    "asyncpg",
    "alembic",
    "psycopg2-binary",
    "pydantic-settings",
    "python-json-logger",
    "prometheus-fastapi-instrumentator",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "black",
    "mypy",
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "datamodel-code-generator>=0.32.0",
]

[tool.black]
line-length = 100
exclude = "src/models\\.py"

[tool.mypy]
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.models"
ignore_errors = true
